Regression(r229831): ProcessSwap.Basic API test is crashing https://bugs.webkit.org/show_bug.cgi?id=183884

Reviewed by Brady Eidson.

This code should only be called for navigation policy decisions.
It used to work without this check because of an early return, which
was dropped in r229831.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::receivedPolicyDecision):

Canonical link: https://commits.webkit.org/199480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229841 268f45cc-cd09-0410-ab3c-d52691b4dbfc